deploy: modify maven, use jdk11